Changed nextID to be retrieved using SQLStatement, doesn't require (direct) getDBConnection call.