@@ -1,6 +1,7 @@
 package com.cannontech.database.db.customer;
 
 import com.cannontech.common.util.CtiUtilities;
+import com.cannontech.database.SqlStatement;
 
 /**
  * This type was created in VisualAge.
@@ -38,6 +39,9 @@ public class Customer extends com.cannontech.database.db.DBPersistent
 
     public void add() throws java.sql.SQLException 
 	{
+		if (getCustomerID() == null)
+			setCustomerID( getNextCustomerID() );
+		
 		Object addValues[] = 
 		{ 
 			getCustomerID(), getPrimaryContactID(),
@@ -56,44 +60,26 @@ public class Customer extends com.cannontech.database.db.DBPersistent
 		delete( TABLE_NAME, CONSTRAINT_COLUMNS, values );
 	}
 	
-	public static synchronized Integer getNextCustomerID( java.sql.Connection conn )
-	{
-		if( conn == null )
-			throw new IllegalStateException("Database connection should not be null.");
-	
-		
-		java.sql.Statement stmt = null;
-		java.sql.ResultSet rset = null;
-		
-		try 
-		{		
-		    stmt = conn.createStatement();
-			 rset = stmt.executeQuery( "SELECT Max(CustomerID)+1 FROM " + TABLE_NAME );	
-				
-			 //get the first returned result
-			 rset.next();
-		    return new Integer( rset.getInt(1) );
-		}
-		catch (java.sql.SQLException e) 
-		{
-		    e.printStackTrace();
-		}
-		finally 
-		{
-		    try 
-		    {
-		    	if ( rset != null) rset.close();
-				if ( stmt != null) stmt.close();
-		    }
-		    catch (java.sql.SQLException e2) 
-		    {
-				e2.printStackTrace();
-		    }
-		}
-		
-		//strange, should not get here
-		return new Integer(CtiUtilities.NONE_ZERO_ID);
-	}
+    public static final Integer getNextCustomerID() {
+    	
+        int nextID = 1;
+        SqlStatement stmt = new SqlStatement("SELECT Max(CustomerID) FROM " + TABLE_NAME, CtiUtilities.getDatabaseAlias());
+        
+        try
+        {
+            stmt.execute();
+            
+            if( stmt.getRowCount() > 0 )
+            {
+                nextID = Integer.valueOf(stmt.getRow(0)[0].toString()).intValue() + 1;
+            }
+        }
+        catch( Exception e )
+        {
+            e.printStackTrace();
+        }
+        return new Integer( nextID );
+    }	
 	
 	public void retrieve() throws java.sql.SQLException 
 	{
